--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#" class="logo"> logo</a>
 
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="#" class="active">Home</a></li>
             <li>
                 <a href="#">Sobre </a>
             </li>
